Fixed header h1 size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,7 @@ header h1 {
     width: 100%;
     height: 100%;
     flex-grow: 2;
-    padding-left: 10px;
-    padding-top: 10px;
+    padding: 10px;
     text-align: center;
 }
 
@@ -106,7 +105,7 @@ section {
     display: flex;
     flex-direction: column;
     width: 45px;
-    height: 50px;
+    height: 45px;
     justify-content: center;
     padding-left: 5px;
 }
@@ -117,7 +116,7 @@ section {
 
 .hamburger span {
     border-top: 3px solid black;
-    margin: 5px;
+    margin: 4px;
 }
 
 .lessonBox {
